# aof-plo

./: .gitignore
solver/: pyproject.toml
solver/src/: cards.py  cfr.py  equity.py  export.py  game.py
solver/tests/: test_cards.py  test_cfr.py  test_equity.py  test_game.py
web/public/: ranges.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: ActionTree.tsx  GridCell.tsx  RangeGrid.tsx
web/src/lib/: plo.ts  ranges.ts
